[project]
name = "mo-buzz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # build_arbiter.py (define + push the arbiter) needs the full SDK
    "modaic>=0.42.1",
    "dspy>=3.1.3",
    # The Modal app / runtime
    "modal>=1.3.3",
    "modaic-client>=0.42.1",
    "praw>=7.7",
    "pyyaml>=6",
    "slack-sdk>=3.27",
    "pydantic-settings>=2.6",
    "fastapi>=0.115",
]
